# Celerrime

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  osx-run.sh  run.sh  win-run.sh
include/: common.h  config.h  file_reader.h  gl.h  linalg.h  main_helper.h  phys.h  util.h
include/cel/: app.hpp  constants.hpp  settings.hpp  world.hpp
include/cel/eng/: audio.hpp  gl.hpp  glfw_win.hpp  input.hpp  linalg.hpp  load_ini.hpp  log.hpp  misc_util.hpp  phys.hpp  pmr_list.hpp  render.hpp  strings.hpp  window.hpp
include/cel/game/: imgui_menus.hpp  mandelbrot_layer.hpp  player.hpp
include/cel/game/dbg/: mandelbrot_layer.hpp  phys_test.hpp  tgrs.hpp
include/cel/game/etc/: hanoi.hpp  seesaw_rocket.hpp
include/cel/script/: vm.hpp
include/scripting/: pymodule.h
misc/: archive.txt  compressor.py  mingw.cmake  png2rim.c
misc/asm/: asm.py  out.txt  test.asm
res/: out.rim  test.rcmp
res/frag/: default.frag  mandelbrot-fast.frag  mandelbrot.frag  newton_fractal.frag
res/lang/: en.ini
res/shader/: default.frag  default.vert
res/vert/: default.vert
src/: common.c  file_reader.c  gl.c  linalg.c  main.c  main.cpp  main_helper.c  phys.c  util.c
src/cel/: app.cpp  constants.cpp  settings.cpp  world.cpp
src/cel/eng/: audio.cpp  gl.cpp  glfw_win.cpp  input.cpp  linalg.cpp  load_ini.cpp  log.cpp  misc_util.cpp  phys.cpp  render.cpp  strings.cpp  window.cpp
src/cel/game/: imgui_menus.cpp  mandelbrot_layer.cpp
src/cel/game/dbg/: mandelbrot_layer.cpp  phys_test.cpp  tgrs.cpp
src/cel/game/etc/: hanoi.cpp  seesaw_rocket.cpp
src/cel/script/: vm.cpp
src/scripting/: pymodule.c
